k8s/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
        lifecycle:
          postStart:
            exec:
              command:
              - sh
              - -c
              - |
                echo "host all all all md5" >> /var/lib/postgresql/data/pgdata/pg_hba.conf
                echo "listen_addresses = '*'" >> /var/lib/postgresql/data/pgdata/postgresql.conf
                pg_ctl reload
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
