k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
      - name: hivebox
        image: hivebox:0.0.1
        imagePullPolicy: Never  # Critical for local images
        ports:
        - containerPort: 8000
