k8s/djanservice.yaml
# Django Application Service
apiVersion: v1
kind: Service
metadata:
  name: hivebox
spec:
  selector:
    app: hivebox
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
