k8s/servic.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
spec:
  selector:
    app: hivebox
  ports:
    - protocol: TCP
      port: 80 # Service port
      targetPort: 8000 # Container port
  type: ClusterIP # Or NodePort for testing
